test/fail_compilation/fail299.d
struct Foo {
}

void foo (Foo b, void delegate ()) {
}

void main () {
    foo(Foo(1), (){});
}
